# snake-c

./: CMakeLists.txt  README.md  main.c
include/: color.h  food.h  game.h  snake.h  window.h
src/: food.c  game.c  snake.c  window.c
